Improved responsive filter

--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
 			<div class="options">
 				<label class="text-center active">
 					<input checked type="radio" class="radio option" name="radio_button" value="1948,1989" >
-					<span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>—— Vše <span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>——
+					<span class="hide-for-small">———</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span> Vše <span class="hide-for-small">———</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>
 				</label>
 				<label class="text-center">
 					<input type="radio" class="radio option" name="radio_button" value="1948,1950" >
-					1948 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1950
+					1948 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1950
 				</label>
 				<label class="text-center">
 					<input type="radio" class="radio option" name="radio_button" value="1951,1965" >
-					1951 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1965
+					1951 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1965
 				</label>
 				<label class="text-center">
 					<input type="radio" class="radio option" name="radio_button" value="1966,1971" >
-					1966 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1971
+					1966 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1971
 				</label>
 				<label class="text-center">
 					<input type="radio" class="radio option" name="radio_button" value="1972,1989" >
-					1972 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1989
+					1972 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1989
 				</label>
 			</div>
 		</div>
@@ -149,7 +149,7 @@
 						<!-- 9 = 7. sušická bps -->
 						<!-- 10 = 9. domažlická bps -->
 						<!-- 11 = 9. poběžovická bps -->
-						<option value="false">všechny útvary</option>
+						<option value="false">všechny útvary příhraniční stráže</option>
 						<option value="1">10. volarská bps</option>
 						<option value="2">11. bratislavská bps</option>
 						<option value="3">12. plánská bps</option>
