--- a/index.html
+++ b/index.html
@@ -45,23 +45,35 @@
 			<div class="options">
 				<label class="text-center active">
 					<input checked type="radio" class="radio option" name="radio_button" value="1948,1989" >
-					<span class="hide-for-small">———</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span> Vše <span class="hide-for-small">———</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>
+					<span class="hide-for-small">—</span><span class="hide-for-medium">—</span><span class="hide-for-large">——</span> Všechna období <span class="hide-for-small">—</span><span class="hide-for-medium">—</span><span class="hide-for-large">——</span>
 				</label>
-				<label class="text-center">
+				<label class="text-center tooltip-item">
 					<input type="radio" class="radio option" name="radio_button" value="1948,1950" >
 					1948 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1950
+					<div class="tooltip">
+						<p>Lorem ipsum doldae oluptate aperiam unde voluptates quas.</p>
+					</div>
 				</label>
-				<label class="text-center">
+				<label class="text-center tooltip-item">
 					<input type="radio" class="radio option" name="radio_button" value="1951,1965" >
 					1951 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1965
+					<div class="tooltip">
+						<p>Lorem ipsum doldae oluptate aperiam unde voluptates quas.</p>
+					</div>
 				</label>
-				<label class="text-center">
+				<label class="text-center tooltip-item">
 					<input type="radio" class="radio option" name="radio_button" value="1966,1971" >
 					1966 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1971
+					<div class="tooltip">
+						<p>Lorem ipsum doldae oluptate aperiam unde voluptates quas.</p>
+					</div>
 				</label>
-				<label class="text-center">
+				<label class="text-center tooltip-item">
 					<input type="radio" class="radio option" name="radio_button" value="1972,1989" >
 					1972 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1989
+					<div class="tooltip">
+						<p>Lorem ipsum doldae oluptate aperiam unde voluptates quas.</p>
+					</div>
 				</label>
 			</div>
 		</div>
@@ -286,13 +298,13 @@
 				</dl>
 			</div>
 			<div class="close">
-				<a href="#"><img src="img/ui/close.png" alt="Zavřít okno"></a>
+				<a href="#"><img src="img/ui/close.png" title="Zavřít okno"></a>
 			</div>
 		</div>
 	</section>
 
 	<div id="map-canvas"></div>
-	<a href="#" id="reset-view" class="button text-center">&orarr;</a>
+	<a href="#" id="reset-view" class="button text-center" title="Resetovat zobrazení mapy">&orarr;</a>
 
 	<script src="js/nouislider.min.js"></script>
 	<script src="js/main.js"></script>
