--- a/index.html
+++ b/index.html
@@ -155,9 +155,88 @@
 				<label class="custom-select" for="">
 					<select id="residence">
 						<option value="false">všechny okresy bydliště</option>
-						<option value="1">Saab</option>
-						<option value="2">Opel</option>
-						<option value="3">Audi</option>
+						<option value="1">Allier</option>
+						<option value="2">Arnsberg</option>
+						<option value="3">Benešov</option>
+						<option value="4">Beroun</option>
+						<option value="5">Břeclav</option>
+						<option value="6">Brno-Country</option>
+						<option value="7">Brno-město</option>
+						<option value="8">Bruntál</option>
+						<option value="9">Budapest</option>
+						<option value="10">Bytom</option>
+						<option value="11">C</option>
+						<option value="12">České Budějovice</option>
+						<option value="13">Český Krumlov</option>
+						<option value="14">Cheb</option>
+						<option value="15">Chomutov</option>
+						<option value="16">DA</option>
+						<option value="17">DD</option>
+						<option value="18">Děčín</option>
+						<option value="19">Domažlice</option>
+						<option value="20">Esztergomi</option>
+						<option value="21">Frýdek-Místek</option>
+						<option value="22">Gdańsk</option>
+						<option value="23">gliwicki</option>
+						<option value="24">Hlavní město Praha</option>
+						<option value="25">Jablonec nad Nisou</option>
+						<option value="26">Jindřichův Hradec</option>
+						<option value="27">Karlovy Vary</option>
+						<option value="28">Karviná</option>
+						<option value="29">Katowice</option>
+						<option value="30">Kladno</option>
+						<option value="31">Klatovy</option>
+						<option value="32">Kolín</option>
+						<option value="33">Kroměříž</option>
+						<option value="34">KS</option>
+						<option value="35">Leipzig</option>
+						<option value="36">Levoča</option>
+						<option value="37">Liberec</option>
+						<option value="38">Linz</option>
+						<option value="39">Litoměřice</option>
+						<option value="40">Louny</option>
+						<option value="41">Malacky</option>
+						<option value="42">Mělník</option>
+						<option value="43">Mistelbach</option>
+						<option value="44">Mittelfranken</option>
+						<option value="45">Mladá Boleslav</option>
+						<option value="46">Most</option>
+						<option value="47">Nagykátai</option>
+						<option value="48">Niederbayern</option>
+						<option value="49">Nový Jičín</option>
+						<option value="50">Nymburk</option>
+						<option value="51">Oberbayern</option>
+						<option value="52">Oberfranken</option>
+						<option value="53">Oberpfalz</option>
+						<option value="54">Olomouc</option>
+						<option value="55">Opole</option>
+						<option value="56">Ostrava-město</option>
+						<option value="57">Písek</option>
+						<option value="58">Plzeň-jih</option>
+						<option value="59">Plzeň-město</option>
+						<option value="60">Poznań</option>
+						<option value="61">Prachatice</option>
+						<option value="62">Prague-East</option>
+						<option value="63">Přerov</option>
+						<option value="64">radomski</option>
+						<option value="65">Rokycany</option>
+						<option value="66">Skalica</option>
+						<option value="67">Sokolov</option>
+						<option value="68">Stará Ľubovňa</option>
+						<option value="69">Süd</option>
+						<option value="70">Šumperk</option>
+						<option value="71">świdnicki</option>
+						<option value="72">Tachov</option>
+						<option value="73">Trnava</option>
+						<option value="74">Trutnov</option>
+						<option value="75">Ústí nad Labem</option>
+						<option value="76">Vsetín</option>
+						<option value="77">Vyškov</option>
+						<option value="78">Waidhofen an der Thaya</option>
+						<option value="79">wałbrzyski</option>
+						<option value="8O">Zlín</option>
+						<option value="81">Znojmo</option>
+						<option value="82">Žďár nad Sázavou</option>
 					</select>
 				</label>
 				<hr>
