--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
 					<input type="radio" class="radio option" name="radio_button" value="1948,1950" >
 					1948 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1950
 					<div class="tooltip">
-						<p>Lorem ipsum doldae oluptate aperiam unde voluptates quas.</p>
+						<p>Od komunistického převratu do vzniku Pohraniční stráže.</p>
 					</div>
 				</label>
 				<label class="text-center tooltip-item">
 					<input type="radio" class="radio option" name="radio_button" value="1951,1965" >
 					1951 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1965
 					<div class="tooltip">
-						<p>Lorem ipsum doldae oluptate aperiam unde voluptates quas.</p>
+						<p>Od vzniku pohraniční stráže do odpojení vysokého napětí a přechodu PS pod ministerstvo národní obrany.</p>
 					</div>
 				</label>
 				<label class="text-center tooltip-item">
 					<input type="radio" class="radio option" name="radio_button" value="1966,1971" >
 					1966 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1971
 					<div class="tooltip">
-						<p>Lorem ipsum doldae oluptate aperiam unde voluptates quas.</p>
+						<p>Od odpojení vysokého napětí do zařazení Pohraniční stráže pod Federální ministerstvo vnitra.</p>
 					</div>
 				</label>
 				<label class="text-center tooltip-item">
 					<input type="radio" class="radio option" name="radio_button" value="1972,1989" >
 					1972 <span class="hide-for-small">————</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>— 1989
 					<div class="tooltip">
-						<p>Lorem ipsum doldae oluptate aperiam unde voluptates quas.</p>
+						<p>Od zařazení Pohraniční stráže pod Federální ministerstvo vnitra po pád komunistického režimu.</p>
 					</div>
 				</label>
 			</div>
