Reset filters functionality

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 				</ul>
 				<hr>
 			</div>
-			<a href="" id="reset-filters" class="small text-center">&orarr; Resetovat filtrování</a>
+			<a href="javascript:void(0)" id="reset-filters" class="small text-center">&orarr; Resetovat filtrování</a>
 		</div>
 		<a id="roll-up-filters" class="roll-up" href="#">
 			<div>
