Better syntax for inputs

--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
 				<h4>Pohlaví</h4>
 				<ul>
 					<li>
-						<label class="gender">
-							<input type="checkbox" name="gender" value="0" checked>
+						<label class="gender" for="genderFemale">
+							<input type="checkbox" name="gender" value="female" id="genderFemale" checked>
 							<i></i>
 							<div>žena</div>
 						</label>
 					</li>
 					<li>
-						<label class="gender">
-							<input type="checkbox" name="gender" value="1" checked>
+						<label class="gender" for="genderMale">
+							<input type="checkbox" name="gender" value="male" id="genderMale" checked>
 							<i></i>
 							<div>muž</div>
 						</label>
 					</li>
 					<li>
-						<label class="gender">
-							<input type="checkbox" name="gender" value="2" checked>
+						<label class="gender" for="genderNa">
+							<input type="checkbox" name="gender" value="na" id="genderNa" checked>
 							<i class="gray"></i>
 							<div class="gray">neurčeno</div>
 						</label>
@@ -307,17 +307,17 @@
 				<h4>Směr přechodu</h4>
 				<ul>
 					<li>
-						<label class="gender">
-							<input type="checkbox" name="direction" value="0" checked>
+						<label class="gender" for="directionOut">
+							<input type="checkbox" name="direction" value="out" id="directionOut" checked>
 							<i></i>
 							<div>ven</div>
 						</label>
 					</li>
 					<li>
-						<label class="gender">
-							<input type="checkbox" name="direction" value="1" checked>
+						<label class="gender" for="directionIn">
+							<input type="checkbox" name="direction" value="in" id="directionIn" checked>
 							<i></i>
-							<div>dovtniř</div>
+							<div>dovnitř</div>
 						</label>
 					</li>
 				</ul>
