--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="options">
 				<label class="text-center active">
 					<input checked type="radio" class="radio option" name="radio_button" value="1948,1989" >
-					<span class="hide-for-small">—</span><span class="hide-for-medium">—</span><span class="hide-for-large">——</span> Všechna období <span class="hide-for-small">—</span><span class="hide-for-medium">—</span><span class="hide-for-large">——</span>
+					<hr> Všechna období <hr>
 				</label>
 				<label class="text-center tooltip-item">
 					<input type="radio" class="radio option" name="radio_button" value="1948,1950" >
