--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 				</dl>
 			</div>
 			<div class="close">
-				<a href="#"><img src="img/ui/close.png" title="Zavřít okno"></a>
+				<a href="javascript:void(0)"><img src="img/ui/close.png" title="Zavřít okno"></a>
 			</div>
 		</div>
 	</section>
