--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
+	<script src="js/modernizr.js"></script>
+
 	<script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclusterer/1.0.2/src/markerclusterer_compiled.js"></script>
 	<script type="text/javascript" src="js/oms.min.js"></script>
 	<script type="text/javascript" src="js/map-custom.js"></script>
@@ -380,6 +382,3 @@
 
 </body>
 </html>
-
-
-
