--- a/index.html
+++ b/index.html
@@ -331,42 +331,49 @@
 				<h1>Informace o zvolené osobě</h1>
 			</div>
 			<div class="content">
-				<dl>
-					<dd id="jmeno_osoby">
-					</dd>
-					<dt>
-						Věk
-					</dt>
-					<dd id="vek_h">
-					</dd>
-					<dt>
-						Státní příslušnost
-					</dt>
-					<dd id="statni_prislusnost">
-					</dd>
-					<dt>Okres bydliště</dt>
-					<dd id="okres_bydliste_cz"></dd>
-					<dt>
-						Odpovědný útvar
-					</dt>
-					<dd id="utvar_incidentu">
-					</dd>
-					<dt>
-						Směr přechodu
-					</dt>
-					<dd id="smer_prechodu">
-					</dd>
-					<dt>
-						Úmrtí
-					</dt>
-					<dd id="umrti">
-					</dd>
-					<dt>
-						Rok
-					</dt>
-					<dd id="rok">
-					</dd>
-				</dl>
+				<div>
+					<dl>
+						<dt>Jméno osoby</dt>
+						<dd id="jmeno_osoby">
+						</dd>
+						<dt>
+							Státní příslušnost
+						</dt>
+						<dd id="statni_prislusnost">
+						</dd>
+						<dt>
+							Rok incidentu
+						</dt>
+						<dd id="rok">
+						</dd>
+						<dt>
+							Odpovědný útvar
+						</dt>
+						<dd id="utvar_incidentu">
+						</dd>
+					</dl>
+				</div>
+				<div>
+					<dl>
+						<dt>
+							Věk
+						</dt>
+						<dd id="vek_h">
+						</dd>
+						<dt>Okres bydliště</dt>
+						<dd id="okres_bydliste_cz"></dd>
+						<dt>
+							Směr přechodu
+						</dt>
+						<dd id="smer_prechodu">
+						</dd>
+						<dt>
+							Způsob úmrtí
+						</dt>
+						<dd id="umrti">
+						</dd>
+					</dl>
+				</div>
 			</div>
 			<div class="close">
 				<a href="javascript:void(0)"><img src="img/ui/close.png" title="Zavřít okno"></a>
