--- a/index.html
+++ b/index.html
@@ -316,7 +316,9 @@
 				</ul>
 				<hr>
 			</div>
-			<a href="javascript:void(0)" id="reset-filters" class="small text-center">&orarr; Resetovat filtrování</a>
+			<a href="javascript:void(0)" id="reset-filters" class="small text-center">
+				<img src="img/refresh-arrow.png" alt="Resetovat úroveň přiblížení a pozici na mapě"> Resetovat filtrování
+			</a>
 		</div>
 		<a id="roll-up-filters" class="roll-up" href="#">
 			<div>
@@ -382,7 +384,9 @@
 	</section>
 
 	<div id="map-canvas"></div>
-	<a href="#" id="reset-view" class="button text-center" title="Resetovat zobrazení mapy">&orarr;</a>
+	<a href="#" id="reset-view" class="button text-center" title="Resetovat zobrazení mapy">
+		<img src="img/refresh-arrow.png" alt="Resetovat úroveň přiblížení a pozici na mapě">
+	</a>
 
 	<script src="js/nouislider.min.js"></script>
 	<script src="js/main.js"></script>
