--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 				<hr>
 			</div>
 			<a href="javascript:void(0)" id="reset-filters" class="small text-center">
-				<img src="img/ui/refresh-arrow.png" alt="Resetovat úroveň přiblížení a pozici na mapě"> Resetovat filtrování
+				<img src="img/ui/refresh-arrow.svg" alt="Resetovat úroveň přiblížení a pozici na mapě"> Resetovat filtrování
 			</a>
 		</div>
 		<a id="roll-up-filters" class="roll-up" href="#">
@@ -402,7 +402,7 @@
 
 	<div id="map-canvas"></div>
 	<a href="#" id="reset-view" class="button text-center" title="Resetovat zobrazení mapy">
-		<img src="img/ui/refresh-arrow.png" alt="Resetovat úroveň přiblížení a pozici na mapě">
+		<img src="img/ui/refresh-arrow.svg" alt="Resetovat úroveň přiblížení a pozici na mapě">
 	</a>
 
 	<script src="js/nouislider.min.js"></script>
