--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Přes železnou oponu: Usmrcení na československé hranici</title>
 	<meta name="description" content="">
 
+	<link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="css/styles.css">
 
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEX0ppwsuLCVSqKzyDkj5KDTnx3KXt_zw"></script>
