--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<script src="https://cdn.jsdelivr.net/jquery.scrollto/2.1.0/jquery.scrollTo.min.js"></script>
 
-	<script src="//use.typekit.net/ick7ets.js"></script>
+	<script src="https://use.typekit.net/pry6suo.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 </head>
