--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 	<header class="intro">
 		<div class="scroll wrap">
 			<section class="welcome">
-				<h1 class="">
-					Usmrcení na československé hranici
-					<br>
-					<a class="toApp hide-for-small" href="javascript:void(0)">&#8702; Aplikace</a>
-				</h1>
+				<div class="title">
+					<h1 class="">
+						Usmrcení na československé hranici
+					</h1>
+					<a class="toApp hide-for-small" href="javascript:void(0)">Aplikace</a>
+				</div>
 				<article>
 					<p>
 						Na hranicích Československa zahynulo v období komunistického režimu mezi lety 1948 a&#160;1989 nejméně 266 lidí, kteří se na hranici zřejmě neocitli náhodou. Tato aplikace představuje výsledky projektu Dokumentace usmrcených na čs. hranici 1948-1989, který se zabýval osudy těchto lidí. Na základě podrobného zmapování jednotlivých případů lze volit vlastní pohledy, a&#160;skládat tak příběh této skupiny tragicky zesnulých.
@@ -293,7 +294,7 @@
 				<label class="custom-select" for="">
 					<select id="death">
 						<option value="false">všechny příčiny úmrtí</option>
-						<option value="0">zasažení el. proudem</option>
+						<option value="0">zasažení elektrickým proudem</option>
 						<option value="1">střelba pohraničníků</option>
 						<option value="2">pád sestřeleného letadla</option>
 						<option value="3">sebevražda</option>
@@ -403,7 +404,7 @@
 
 	<div id="map-canvas"></div>
 	<a href="#" id="reset-view" class="button text-center" title="Resetovat zobrazení mapy">
-		<img src="img/ui/refresh-arrow.svg" alt="Resetovat úroveň přiblížení a pozici na mapě">
+		<img src="img/ui/refresh-arrow.svg" alt="Resetovat úroveň přiblížení a pozici	 na mapě">
 	</a>
 
 	<!-- Hotjar Tracking Code for http://mapa.zelezna-opona.cz -->
