typo & better semantic classes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<span><img class="left" src="img/ui/burger.png" alt="Menu"> Menu</span>
 	</header>
 
-	<section id="controls" class="controls">
+	<section id="periods" class="controls periods">
 		<div class="checkbox">
 			<div class="options">
 				<label class="text-center active">
@@ -100,7 +100,7 @@
 		</div>
 	</section>
 
-	<section id="filters" class="filters hidden">
+	<section id="filters" class="controls filters hidden">
 		<header>
 			<div>Filtrování dle dalších kategorií</div>
 		</header>
