Link to zelezna-opona.cz & contact

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
 	<header class="intro">
 		<div class="scroll wrap">
+			<a id="priloha" href="//www.zelezna-opona.cz/" target="_blank"><section>
+				Tato interaktivní mapová aplikace vznikla k příležitosti vydání knihy <span class="caps">Železná opona v Československu. Usmrcení na československých státních hranicích v letech 1948–1989</span>.
+			</section></a>
 			<section class="welcome">
 				<div class="title">
 					<h1 class="">
@@ -42,6 +45,9 @@
 					<p>
 						Na hranicích Československa zahynulo v období komunistického režimu mezi lety 1948 a&#160;1989 nejméně 266 lidí, kteří se na hranici zřejmě neocitli náhodou. Tato aplikace představuje výsledky projektu Dokumentace usmrcených na čs. hranici 1948-1989, který se zabýval osudy těchto lidí. Na základě podrobného zmapování jednotlivých případů lze volit vlastní pohledy, a&#160;skládat tak příběh této skupiny tragicky zesnulých.
 					</p>
+					<p>
+						V případě dotazů pište na <a href="mailto:zeleznaopona@ustrcr.cz">zeleznaopona@ustrcr.cz</a>.
+					</p>
 				</article>
 			</section>
 			<section class="guide">
@@ -52,11 +58,13 @@
 				<div class="guide-images" id="marker">
 					<img src="img/navod/marker.jpg" alt="Popis interakce s bodem na mapě">
 				</div>
+				<br>
+				<div class="text-center">
+					Přejít do
+					<a class="toApp" href="javascript:void(0)">Aplikace</a>
+				</div>
 			</section>
-			<div class="text-center">
-				Přejít do
-				<a class="toApp" href="javascript:void(0)">Aplikace</a>
-			</div>
+
 		</div>
 		<span><img class="left" src="img/ui/burger.png" alt="Menu"> Menu</span>
 	</header>
