No need for hardcoded values

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 
 	<div id="map-canvas"></div>
 
-	<div id="number-markers"><span>244</span> <span>usmrcených</span></div>
+	<div id="number-markers"><span></span> <span></span></div>
 
 	<a href="#" id="reset-view" class="button text-center" title="Resetovat zobrazení mapy">
 		<img src="img/ui/refresh-arrow.svg" alt="Resetovat úroveň přiblížení a pozici	 na mapě">
