--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<script src="js/modernizr.js"></script>
 
-	<script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclusterer/1.0.2/src/markerclusterer_compiled.js"></script>
+	<script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclustererplus/src/markerclusterer_packed.js"></script>
 	<script type="text/javascript" src="js/oms.min.js"></script>
 	<script type="text/javascript" src="js/map-custom.js"></script>
 
