checkboxes values changed (issue-44)

--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@
 				<ul>
 					<li>
 						<label class="gender" for="genderFemale">
-							<input type="checkbox" name="gender" value="female" id="genderFemale" checked>
+							<input type="checkbox" name="gender" value="1" id="genderFemale" checked>
 							<i></i>
 							<div>žena</div>
 						</label>
 					</li>
 					<li>
 						<label class="gender" for="genderMale">
-							<input type="checkbox" name="gender" value="male" id="genderMale" checked>
+							<input type="checkbox" name="gender" value="0" id="genderMale" checked>
 							<i></i>
 							<div>muž</div>
 						</label>
 					</li>
 					<li>
 						<label class="gender" for="genderNa">
-							<input type="checkbox" name="gender" value="na" id="genderNa" checked>
+							<input type="checkbox" name="gender" value="2" id="genderNa" checked>
 							<i class="gray"></i>
 							<div class="gray">neurčeno</div>
 						</label>
@@ -321,21 +321,21 @@
 				<ul>
 					<li>
 						<label class="gender" for="directionOut">
-							<input type="checkbox" name="direction" value="out" id="directionOut" checked>
+							<input type="checkbox" name="direction" value="1" id="directionOut" checked>
 							<i></i>
 							<div>ven</div>
 						</label>
 					</li>
 					<li>
 						<label class="gender" for="directionIn">
-							<input type="checkbox" name="direction" value="in" id="directionIn" checked>
+							<input type="checkbox" name="direction" value="2" id="directionIn" checked>
 							<i></i>
 							<div>dovnitř</div>
 						</label>
 					</li>
 					<li>
 						<label class="gender" for="directionNa">
-							<input type="checkbox" name="direction" value="na" id="directionNa" checked>
+							<input type="checkbox" name="direction" value="0" id="directionNa" checked>
 							<i></i>
 							<div>neurčeno</div>
 						</label>
