Almost centered map & info printing on one page

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 	<div id="print">
 		<h1>Přes železnou oponu: Usmrcení na československé hranici</h1>
 		<div id="list-of-filters"></div>
-		<div id="p-infobox">
+		<div id="print-infobox">
 			<div>
 				<dl>
 					<dt>Jméno osoby</dt>
