Rename id of print button

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 			<img src="img/ui/refresh-arrow.svg" alt="Resetovat úroveň přiblížení a pozici	 na mapě">
 		</a>
 
-		<div id="map-print" class="button text-center">
+		<div id="print-button" class="button text-center">
 			Tisk
 		</div>
 
