Improved layout for print

--- a/index.html
+++ b/index.html
@@ -436,6 +436,17 @@
 					</dt>
 					<dd id="statni_prislusnost">
 					</dd>
+					<dt>Okres bydliště</dt>
+					<dd id="okres_bydliste_cz"></dd>
+				</dl>
+			</div>
+			<div>
+				<dl>
+					<dt>
+						Věk
+					</dt>
+					<dd id="vek_h">
+					</dd>
 					<dt>
 						Rok incidentu
 					</dt>
@@ -451,21 +462,14 @@
 			<div>
 				<dl>
 					<dt>
-						Věk
+						Způsob úmrtí
 					</dt>
-					<dd id="vek_h">
+					<dd id="umrti">
 					</dd>
-					<dt>Okres bydliště</dt>
-					<dd id="okres_bydliste_cz"></dd>
 					<dt>
 						Směr přechodu
 					</dt>
 					<dd id="smer_prechodu">
-					</dd>
-					<dt>
-						Způsob úmrtí
-					</dt>
-					<dd id="umrti">
 					</dd>
 				</dl>
 			</div>
