Improved listing of active filters

--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
 		<div id="print-infobox">
 			<div>
 				<dl>
+					<div>Informace o zvolené osobě: </div>
 					<dt>Jméno osoby</dt>
 					<dd id="jmeno_osoby">
 					</dd>
