--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 	<link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="css/styles.css">
 
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEX0ppwsuLCVSqKzyDkj5KDTnx3KXt_zw"></script>
+	<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyAEX0ppwsuLCVSqKzyDkj5KDTnx3KXt_zw"></script>
 
-	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 
 	<script src="js/modernizr.js"></script>
 
-	<script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclusterer/1.0.2/src/markerclusterer_compiled.js"></script>
-	<script type="text/javascript" src="js/oms.min.js"></script>
-	<script type="text/javascript" src="js/map-custom.js"></script>
-
-	<script src="https://cdn.jsdelivr.net/jquery.scrollto/2.1.0/jquery.scrollTo.min.js"></script>
+	<!-- <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclusterer/1.0.2/src/markerclusterer_compiled.js"></script> -->
+	<script src="js/markercluster.min.js"></script>
+	<script src="js/oms.min.js"></script>
+	<script src="js/map-custom.js"></script>
 
 	<script src="https://use.typekit.net/pry6suo.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -438,9 +437,9 @@
 
 	// ga('create', 'UA-71204833-2', 'auto');
 	// ga('send', 'pageview');
-
 	</script>
 
+	<script src="//cdn.jsdelivr.net/jquery.scrollto/2.1.0/jquery.scrollTo.min.js"></script>
 	<script src="js/nouislider.min.js"></script>
 	<script src="js/main.js"></script>
 
